Replace Guava with the JDK where it is equivalent
Guava reaches this plugin through the IDE it runs in, not through a
dependency of its own, so every use of it is tied to what the platform
happens to bundle. The JDK covers all of them but one: CharMatcher in
PushOptionValidator stays, its whitespace definition catches what
Character.isWhitespace misses (a pasted no-break space, among others)
and the class is built around trimming and reporting exactly those.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AnsPPsZL1QByGDFgYb9PVz