@@ -22,11 +22,6 @@ import static com.intellij.icons.AllIcons.Actions.Forward;
 import static com.intellij.icons.AllIcons.Actions.MoveDown;
 import static com.intellij.icons.AllIcons.Actions.MoveUp;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
 import com.google.gerrit.extensions.common.ChangeInfo;
 import com.intellij.icons.AllIcons;
 import com.intellij.openapi.actionSystem.ActionGroup;
@@ -38,16 +33,19 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * @author Urs Wolfer
  */
 public class ReviewActionGroup extends ActionGroup implements UpdateInBackground {
-    private static final ImmutableMap<Integer, Icon> ICONS = ImmutableMap.of(
+    private static final Map<Integer, Icon> ICONS = Map.of(
         -2, Cancel,
         -1, MoveDown,
         0, Forward,
@@ -74,7 +72,7 @@ public class ReviewActionGroup extends ActionGroup implements UpdateInBackground
             return new AnAction[0];
         }
         Map<String, Collection<String>> permittedLabels = selectedChange.get().permittedLabels;
-        List<AnAction> labels = Lists.newArrayList();
+        List<AnAction> labels = new ArrayList<>();
         if (permittedLabels != null) {
             for (Map.Entry<String, Collection<String>> entry : permittedLabels.entrySet()) {
                 labels.add(createLabelGroup(entry));
@@ -88,19 +86,16 @@ public class ReviewActionGroup extends ActionGroup implements UpdateInBackground
             @NotNull
             @Override
             public AnAction[] getChildren(@Nullable AnActionEvent anActionEvent) {
-                List<AnAction> valueActions = Lists.newArrayList();
+                List<AnAction> valueActions = new ArrayList<>();
                 Collection<String> values = entry.getValue();
-                List<Integer> intValues = Lists.newArrayList(Collections2.transform(
-                    values, new Function<String, Integer>() {
-                        @Override
-                        public Integer apply(String v) {
-                            v = v.trim();
-                            if (v.charAt(0) == '+') v = v.substring(1); // required for Java 6 support
-                            return Integer.valueOf(v);
-                        }
-                    }));
-                Collections.sort(intValues);
-                Collections.reverse(intValues);
+                List<Integer> intValues = values.stream()
+                    .map(value -> {
+                        String v = value.trim();
+                        if (v.charAt(0) == '+') v = v.substring(1); // required for Java 6 support
+                        return Integer.valueOf(v);
+                    })
+                    .sorted(Comparator.reverseOrder())
+                    .collect(Collectors.toList());
                 for (Integer value : intValues) {
                     valueActions.add(new ReviewAction(entry.getKey(), value, ICONS.get(value), false));
                     valueActions.add(new ReviewAction(entry.getKey(), value, ICONS.get(value), true));
