@@ -16,11 +16,6 @@
 
 package com.urswolfer.intellij.plugin.gerrit.ui.filter;
 
-import com.google.common.base.Joiner;
-import com.google.common.base.Optional;
-import com.google.common.base.Supplier;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Sets;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.project.DumbAwareAction;
@@ -29,13 +24,17 @@ import com.intellij.util.Consumer;
 import com.urswolfer.intellij.plugin.gerrit.ui.BasePopupAction;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 
 /**
  * @author Thomas Forrer
  */
 public class StatusFilter extends AbstractChangesFilter {
-    private static final ImmutableList<Status> STATUSES = ImmutableList.of(
+    private static final List<Status> STATUSES = List.of(
             new Status("All", null),
             new Status("Open", "open"),
             new Status("Merged", "merged"),
@@ -45,17 +44,17 @@ public class StatusFilter extends AbstractChangesFilter {
     private static final Supplier<String> QUERY_FOR_ALL = new Supplier<String>() {
         @Override
         public String get() {
-            Set<String> queryForAll = Sets.newHashSet();
+            Set<String> queryForAll = new HashSet<>();
             for (Status status : STATUSES) {
                 if (status.forQuery.isPresent()) {
                     queryForAll.add(String.format("is:%s", status.forQuery.get()));
                 }
             }
-            return String.format("(%s)", Joiner.on("+OR+").join(queryForAll));
+            return String.format("(%s)", String.join("+OR+", queryForAll));
         }
     };
 
-    private Optional<Status> value = Optional.absent();
+    private Optional<Status> value = Optional.empty();
 
     public StatusFilter() {
         value = Optional.of(STATUSES.get(1));
@@ -86,7 +85,7 @@ public class StatusFilter extends AbstractChangesFilter {
 
         private Status(String label, String forQuery) {
             this.label = label;
-            this.forQuery = Optional.fromNullable(forQuery);
+            this.forQuery = Optional.ofNullable(forQuery);
         }
     }
 
